AddedReadspeaker to title section to fix layout issues. Removed max-width on page titles. Hid go to downloads on publication pages for larger devices. Updated the minor text colour to align with DTA.

--- a/health/sass/components/_readspeaker.scss
+++ b/health/sass/components/_readspeaker.scss
@@ -6,34 +6,13 @@
   .rsbtn {
     margin-bottom: 0;
   }
-
-  // Desktop
-  @include AU-media(sm) {
-    position: absolute;
-    z-index: 9999;
-    right: $AU-grid-12-gutter-width / 2;
-  }
-}
-
-// Video goes to full width at tablet, so use mobile styling for tablet.
-.node-type-video {
-  #readspeaker {
-    @include AU-media(sm) {
-      .rsbtn_colorskin {
-        @include AU-space('margin', 0 0 .5unit 0);
-      }
-    }
-  }
+  @include AU-space('margin', 1unit 0 0 0);
 }
 
 .rsbtn_colorskin {
   position: relative;
   display: inline-block;
   @include AU-space('padding', .5unit 1unit);
-  @include AU-space('margin', 0 0 .5unit 0);
-  @include AU-media(sm) {
-    @include AU-space('margin', 0 0 0 1unit);
-  }
   background: white;
   border-radius: 4px;
   border: 1px solid $AU-color-foreground-action;
