--- a/health/sass/components/_title-section.scss
+++ b/health/sass/components/_title-section.scss
@@ -24,8 +24,6 @@
     @include AU-space('padding', 1.5unit 0 2unit 0);
   }
 
-  max-width: 56em;
-
   // In case no section-supp.
   &.full {
     @extend .col-sm-12;
@@ -65,11 +63,10 @@
 
   // Summary
   .summary {
-    //@extend .au-header__subline;
     @include health-fontgrid('lg', 'default', 'light');
     @include AU-space('margin-bottom', .5unit);
     @include AU-space('margin-top', 1.5unit);
-    color: $AU-color-foreground-text;
+    color: $colour-minorText;
   }
 
 }
